clusters/thinkpad/infra/coder.ii.nz-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ii-nz
  namespace: coder
  labels:
    environment: production
  annotations:
    cert-manager.io/cluster-issuer: ii-nz-letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "coder.ii.nz"
  rules:
    - host: "coder.ii.nz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: coder
                port:
                  number: 80
